feat: changes to body

--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
     <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="bodyNav.css" />
   </head>
+
   <body>
     <header>
       <div class="nav-wrapper">
-        <nav>
-          <menu class="menu1">
+        <nav class="header-nav">
+          <menu class="header-menu1">
             <li class="headerLi"><a href="#">Big Deals</a></li>
             <li class="headerLi"><a href="#">Top Brands</a></li>
             <li class="headerLi"><a href="#">Suggestions</a></li>
             <li class="headerLi"><a href="#">Help & Contact</a></li>
           </menu>
 
-          <menu class="menu2">
+          <menu class="header-menu2">
             <li class="headerLi"><a href="#">Log In/Sign Up</a></li>
             <li class="headerLi"><a href="#">Account</a></li>
           </menu>
@@ -27,7 +28,7 @@
       </div>
 
       <div class="search-wrapper">
-        <menu class="searchMenu">
+        <menu class="search-menu">
           <h1 class="pageTitle">Qwirty</h1>
           <from class="searchBar">
             <input type="text" placeholder="Search for..." />
@@ -37,5 +38,38 @@
         </menu>
       </div>
     </header>
+
+    <div class="outer-wrapper">
+      <div class="inner-wrapper">
+        <nav class="body-nav">
+          <a href="#">Clothing & Shoes</a>
+          <a href="#">Electronics</a>
+          <a href="#">Books</a>
+          <a href="#">Food & Drinks</a>
+          <a href="#">Appliances</a>
+          <a href="#">Sports & Outdoor</a>
+          <a href="#">Toys & Baby</a>
+          <a href="#">Garden</a>
+        </nav>
+
+        <main class="products">
+          <li class="product"></li>
+          <li class="product"></li>
+          <li class="product"></li>
+          <li class="product"></li>
+          <li class="product"></li>
+          <li class="product"></li>
+          <li class="product"></li>
+          <li class="product"></li>
+          <li class="product"></li>
+          <li class="product"></li>
+          <li class="product"></li>
+          <li class="product"></li>
+          <li class="product"></li>
+          <li class="product"></li>
+          <li class="product"></li>
+        </main>
+      </div>
+    </div>
   </body>
 </html>
