feat: updated body

--- a/index.html
+++ b/index.html
@@ -53,21 +53,51 @@
         </nav>
 
         <main class="products">
-          <li class="product"></li>
-          <li class="product"></li>
-          <li class="product"></li>
-          <li class="product"></li>
-          <li class="product"></li>
-          <li class="product"></li>
-          <li class="product"></li>
-          <li class="product"></li>
-          <li class="product"></li>
-          <li class="product"></li>
-          <li class="product"></li>
-          <li class="product"></li>
-          <li class="product"></li>
-          <li class="product"></li>
-          <li class="product"></li>
+          <li class="product">
+            <h2 class="productName">Product Name</h2>
+          </li>
+          <li class="product">
+            <h2 class="productName">Product Name</h2>
+          </li>
+          <li class="product">
+            <h2 class="productName">Product Name</h2>
+          </li>
+          <li class="product">
+            <h2 class="productName">Product Name</h2>
+          </li>
+          <li class="product">
+            <h2 class="productName">Product Name</h2>
+          </li>
+          <li class="product">
+            <h2 class="productName">Product Name</h2>
+          </li>
+          <li class="product">
+            <h2 class="productName">Product Name</h2>
+          </li>
+          <li class="product">
+            <h2 class="productName">Product Name</h2>
+          </li>
+          <li class="product">
+            <h2 class="productName">Product Name</h2>
+          </li>
+          <li class="product">
+            <h2 class="productName">Product Name</h2>
+          </li>
+          <li class="product">
+            <h2 class="productName">Product Name</h2>
+          </li>
+          <li class="product">
+            <h2 class="productName">Product Name</h2>
+          </li>
+          <li class="product">
+            <h2 class="productName">Product Name</h2>
+          </li>
+          <li class="product">
+            <h2 class="productName">Product Name</h2>
+          </li>
+          <li class="product">
+            <h2 class="productName">Product Name</h2>
+          </li>
         </main>
       </div>
     </div>
