feat: updates to body structure

--- a/index.html
+++ b/index.html
@@ -55,48 +55,138 @@
         <main class="products">
           <li class="product">
             <h2 class="productName">Product Name</h2>
+            <img src="#" alt="IMAGE HERE" />
+            <p class="productDescription">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est nemo maxime nostrum sint
+              iure accusantium, alias eaque necessitatibus repellat veritatis voluptatum et enim
+              omnis beatae doloremque laboriosam dolores? Hic, provident.
+            </p>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
+            <img src="#" alt="IMAGE HERE" />
+            <p class="productDescription">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique blanditiis culpa
+              unde voluptates, quibusdam consequatur sit quaerat veritatis exercitationem corporis
+              hic modi laudantium provident eum temporibus dolores ut, laboriosam incidunt?
+            </p>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
+            <img src="#" alt="IMAGE HERE" />
+            <p class="productDescription">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa ipsam explicabo
+              molestiae, provident expedita labore dolorum tempora magnam possimus modi, illo qui
+              est ratione repellat repudiandae sequi quisquam quas illum?
+            </p>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
+            <img src="#" alt="IMAGE HERE" />
+            <p class="productDescription">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat, aliquid nesciunt
+              eveniet odio omnis odit quae quisquam ex blanditiis sapiente ad officia molestiae modi
+              dolor dolore distinctio accusamus animi tenetur.
+            </p>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
+            <img src="#" alt="IMAGE HERE" />
+            <p class="productDescription">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio omnis sapiente similique
+              sunt officia veritatis perspiciatis totam ea blanditiis voluptatem quidem ipsam
+              inventore, temporibus doloremque voluptates nobis quia at enim?
+            </p>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
+            <img src="#" alt="IMAGE HERE" />
+            <p class="productDescription">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam delectus sequi fugit
+              adipisci iure distinctio eveniet nemo voluptatibus culpa est illo quasi dolore alias
+              sunt rerum, ea cupiditate reiciendis repellat!
+            </p>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
+            <img src="#" alt="IMAGE HERE" />
+            <p class="productDescription">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium repellat
+              corrupti vitae minima accusantium sunt velit fugit ex maiores esse animi veritatis
+              perspiciatis ipsam molestias, voluptates quasi tempora in ipsum!
+            </p>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
+            <img src="#" alt="IMAGE HERE" />
+            <p class="productDescription">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores expedita molestiae
+              impedit pariatur! Accusamus laudantium, qui fugiat, omnis dolores tempore nisi
+              explicabo praesentium reiciendis quis veritatis id maiores neque accusantium!
+            </p>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
+            <img src="#" alt="IMAGE HERE" />
+            <p class="productDescription">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum ea rem est qui. Ad
+              cupiditate debitis tempore labore repellat molestias excepturi magni ut, neque vel
+              reprehenderit cumque repellendus necessitatibus deserunt.
+            </p>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
+            <img src="#" alt="IMAGE HERE" />
+            <p class="productDescription">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur aperiam
+              recusandae hic quasi fugiat blanditiis, earum optio repellendus? Quaerat, alias
+              doloribus est quod excepturi libero non ut repudiandae doloremque laboriosam.
+            </p>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
+            <img src="#" alt="IMAGE HERE" />
+            <p class="productDescription">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero delectus dolores
+              deserunt aut ipsum iste natus fugit dolore dicta. Et accusamus exercitationem libero
+              optio repellendus. Officia fuga deleniti nihil perspiciatis?
+            </p>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
+            <img src="#" alt="IMAGE HERE" />
+            <p class="productDescription">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis reprehenderit omnis nemo
+              alias facere porro nam eos non amet asperiores, quam doloremque laborum nostrum modi,
+              voluptate culpa fuga exercitationem totam.
+            </p>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
+            <img src="#" alt="IMAGE HERE" />
+            <p class="productDescription">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi provident rerum
+              sequi sed impedit? Earum quas veritatis exercitationem similique hic ullam eligendi
+              nulla temporibus accusantium! Provident expedita delectus esse ab.
+            </p>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
+            <img src="#" alt="IMAGE HERE" />
+            <p class="productDescription">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum, sed nostrum quas
+              doloribus sunt, adipisci ex ipsam doloremque quidem nemo accusantium enim animi facere
+              exercitationem esse nobis eum amet. Quaerat?
+            </p>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
+            <img src="#" alt="IMAGE HERE" />
+            <p class="productDescription">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt expedita animi
+              similique ipsa veniam accusamus eius quibusdam alias ratione, esse dolorum eos nobis
+              pariatur porro aliquam odio dicta nisi sit.
+            </p>
           </li>
         </main>
       </div>
