feat: updates to product footer

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
               iure accusantium, alias eaque necessitatibus repellat veritatis voluptatum et enim
               omnis beatae doloremque laboriosam dolores? Hic, provident.
             </p>
+            <footer class="productPrice_Cart">
+              <h4 class="priceTag">Price: </h4>
+              <p class="price">$27.99</p>
+              <button class="addToCartBtn">Add To Cart</button>
+            </footer>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
