feat: final changes to body

--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
               unde voluptates, quibusdam consequatur sit quaerat veritatis exercitationem corporis
               hic modi laudantium provident eum temporibus dolores ut, laboriosam incidunt?
             </p>
+            <footer class="productPrice_Cart">
+              <h4 class="priceTag">Price: </h4>
+              <p class="price">$27.99</p>
+              <button class="addToCartBtn">Add To Cart</button>
+            </footer>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
@@ -84,6 +89,11 @@
               molestiae, provident expedita labore dolorum tempora magnam possimus modi, illo qui
               est ratione repellat repudiandae sequi quisquam quas illum?
             </p>
+            <footer class="productPrice_Cart">
+              <h4 class="priceTag">Price: </h4>
+              <p class="price">$27.99</p>
+              <button class="addToCartBtn">Add To Cart</button>
+            </footer>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
@@ -93,6 +103,11 @@
               eveniet odio omnis odit quae quisquam ex blanditiis sapiente ad officia molestiae modi
               dolor dolore distinctio accusamus animi tenetur.
             </p>
+            <footer class="productPrice_Cart">
+              <h4 class="priceTag">Price: </h4>
+              <p class="price">$27.99</p>
+              <button class="addToCartBtn">Add To Cart</button>
+            </footer>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
@@ -102,6 +117,11 @@
               sunt officia veritatis perspiciatis totam ea blanditiis voluptatem quidem ipsam
               inventore, temporibus doloremque voluptates nobis quia at enim?
             </p>
+            <footer class="productPrice_Cart">
+              <h4 class="priceTag">Price: </h4>
+              <p class="price">$27.99</p>
+              <button class="addToCartBtn">Add To Cart</button>
+            </footer>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
@@ -111,6 +131,11 @@
               adipisci iure distinctio eveniet nemo voluptatibus culpa est illo quasi dolore alias
               sunt rerum, ea cupiditate reiciendis repellat!
             </p>
+            <footer class="productPrice_Cart">
+              <h4 class="priceTag">Price: </h4>
+              <p class="price">$27.99</p>
+              <button class="addToCartBtn">Add To Cart</button>
+            </footer>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
@@ -120,6 +145,11 @@
               corrupti vitae minima accusantium sunt velit fugit ex maiores esse animi veritatis
               perspiciatis ipsam molestias, voluptates quasi tempora in ipsum!
             </p>
+            <footer class="productPrice_Cart">
+              <h4 class="priceTag">Price: </h4>
+              <p class="price">$27.99</p>
+              <button class="addToCartBtn">Add To Cart</button>
+            </footer>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
@@ -129,6 +159,11 @@
               impedit pariatur! Accusamus laudantium, qui fugiat, omnis dolores tempore nisi
               explicabo praesentium reiciendis quis veritatis id maiores neque accusantium!
             </p>
+            <footer class="productPrice_Cart">
+              <h4 class="priceTag">Price: </h4>
+              <p class="price">$27.99</p>
+              <button class="addToCartBtn">Add To Cart</button>
+            </footer>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
@@ -138,6 +173,11 @@
               cupiditate debitis tempore labore repellat molestias excepturi magni ut, neque vel
               reprehenderit cumque repellendus necessitatibus deserunt.
             </p>
+            <footer class="productPrice_Cart">
+              <h4 class="priceTag">Price: </h4>
+              <p class="price">$27.99</p>
+              <button class="addToCartBtn">Add To Cart</button>
+            </footer>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
@@ -147,6 +187,11 @@
               recusandae hic quasi fugiat blanditiis, earum optio repellendus? Quaerat, alias
               doloribus est quod excepturi libero non ut repudiandae doloremque laboriosam.
             </p>
+            <footer class="productPrice_Cart">
+              <h4 class="priceTag">Price: </h4>
+              <p class="price">$27.99</p>
+              <button class="addToCartBtn">Add To Cart</button>
+            </footer>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
@@ -156,6 +201,11 @@
               deserunt aut ipsum iste natus fugit dolore dicta. Et accusamus exercitationem libero
               optio repellendus. Officia fuga deleniti nihil perspiciatis?
             </p>
+            <footer class="productPrice_Cart">
+              <h4 class="priceTag">Price: </h4>
+              <p class="price">$27.99</p>
+              <button class="addToCartBtn">Add To Cart</button>
+            </footer>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
@@ -165,6 +215,11 @@
               alias facere porro nam eos non amet asperiores, quam doloremque laborum nostrum modi,
               voluptate culpa fuga exercitationem totam.
             </p>
+            <footer class="productPrice_Cart">
+              <h4 class="priceTag">Price: </h4>
+              <p class="price">$27.99</p>
+              <button class="addToCartBtn">Add To Cart</button>
+            </footer>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
@@ -174,6 +229,11 @@
               sequi sed impedit? Earum quas veritatis exercitationem similique hic ullam eligendi
               nulla temporibus accusantium! Provident expedita delectus esse ab.
             </p>
+            <footer class="productPrice_Cart">
+              <h4 class="priceTag">Price: </h4>
+              <p class="price">$27.99</p>
+              <button class="addToCartBtn">Add To Cart</button>
+            </footer>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
@@ -183,6 +243,11 @@
               doloribus sunt, adipisci ex ipsam doloremque quidem nemo accusantium enim animi facere
               exercitationem esse nobis eum amet. Quaerat?
             </p>
+            <footer class="productPrice_Cart">
+              <h4 class="priceTag">Price: </h4>
+              <p class="price">$27.99</p>
+              <button class="addToCartBtn">Add To Cart</button>
+            </footer>
           </li>
           <li class="product">
             <h2 class="productName">Product Name</h2>
@@ -192,6 +257,11 @@
               similique ipsa veniam accusamus eius quibusdam alias ratione, esse dolorum eos nobis
               pariatur porro aliquam odio dicta nisi sit.
             </p>
+            <footer class="productPrice_Cart">
+              <h4 class="priceTag">Price: </h4>
+              <p class="price">$27.99</p>
+              <button class="addToCartBtn">Add To Cart</button>
+            </footer>
           </li>
         </main>
       </div>
