feat: editing footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="bodyNav.css" />
+    <link rel="stylesheet" href="footer.css">
   </head>
 
   <body>
@@ -266,5 +267,16 @@
         </main>
       </div>
     </div>
+
+    <footer class="pageFooter">
+      <menu class="customerCare footerMenu">
+        <h2>Customer Care</h2>
+        <a href="#" class="customerCareOption">Account</a>
+        <a href="#" class="customerCareOption">Orders</a>
+        <a href="#" class="customerCareOption">Policies</a>
+        <a href="#" class="customerCareOption">Credit</a>
+        <a href="#" class="customerCareOption">Help</a>
+      </menu>
+    </footer>
   </body>
 </html>
